# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

srctrigger="setvar.exp"
srcname="gdb.t04"

# per-host:

# per-target:
