# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

srctrigger="break.exp"
srcname="gdb.t06"

# per-host:

# per-target:

case "${target}" in

mips-idt-ecoff)		signals=no ;;
*)			signals=yes ;;
esac

# post-target:

if [ "${signals}" = "no" ]; then
	sed -e '/^EXECUTABLES =/s/signals //' \
		< Makefile > Makefile.tem
	mv -f Makefile.tem Makefile
fi

