dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run to configure the
dnl	Makefile in this directory.
AC_INIT(pkg1.c)

# Extract information about how to build shared libraries from Tcl's
# Makefile and use it to set up our Makefile.

cd ..
make configInfo
cd dltest
. ../configInfo

AC_SUBST(CC)
AC_SUBST(SHLIB_CFLAGS)
AC_SUBST(SHLIB_LD)
AC_SUBST(SHLIB_SUFFIX)

AC_OUTPUT(Makefile)
